compiler/tests/fa/errors/slice_non_array.salam
// انتظار: خطا۰۲۱
// زبان: فارسی
تابع اصلی:
    متغیر x : صحیح = 5
    متغیر y : خودکار = x[1:2]
    چاپ y
پایان
